WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153861
[GTK] Scrollbars incorrectly rendered with older versions of GTK+
https://bugs.webkit.org/show_bug.cgi?id=153861
Summary
[GTK] Scrollbars incorrectly rendered with older versions of GTK+
Carlos Garcia Campos
Reported
2016-02-04 02:49:48 PST
I tested the new code with GTK+ 3.16, but today I tried GTK+ 3.8 and it's broken, the track is rendered wrong and the thumb is not rendered at all. The theme doesn't really know it's a scrollbar.
Attachments
Patch
(1.45 KB, patch)
2016-02-04 02:52 PST
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2016-02-04 02:52:13 PST
Created
attachment 270649
[details]
Patch
Carlos Garcia Campos
Comment 2
2016-02-05 06:04:39 PST
Committed
r196172
: <
http://trac.webkit.org/changeset/196172
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug