[GTK] Scrollbars incorrectly rendered with older versions of GTK+ https://bugs.webkit.org/show_bug.cgi?id=153861

Reviewed by Michael Catanzaro.

The theme doesn't really know it's a scrollbar. Older versions of
GTK+ require to explicitly add the scrollbar style class to the
child GtkStyleContext.

* platform/gtk/ScrollbarThemeGtk.cpp:
(WebCore::createChildStyleContext):

Canonical link: https://commits.webkit.org/172010@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196172 268f45cc-cd09-0410-ab3c-d52691b4dbfc